--- a/ClipClop.csproj
+++ b/ClipClop.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <None Remove="Fonts\FontAwesomeReg.otf" />
     <None Remove="Fonts\FontAwesomeSolid.otf" />
+    <None Remove="Images\ClipClopIcon.ico" />
+    <None Remove="Images\ClipClopIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +27,12 @@
     <Resource Include="Fonts\FontAwesomeSolid.otf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Content Include="Images\ClipClopIcon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\ClipClopIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
