--- a/ClipClop.csproj
+++ b/ClipClop.csproj
@@ -14,9 +14,18 @@
     <None Remove="Fonts\FontAwesomeSolid.otf" />
     <None Remove="Images\ClipClopIcon.ico" />
     <None Remove="Images\ClipClopIcon.png" />
+    <None Remove="Images\Close.png" />
+    <None Remove="Images\Settings.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Images\Close.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
   </ItemGroup>
 
@@ -27,10 +36,13 @@
     <Resource Include="Fonts\FontAwesomeSolid.otf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Content Include="Images\ClipClopIcon.ico">
+    <Resource Include="Images\ClipClopIcon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="Images\ClipClopIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Images\ClipClopIcon.png">
+    <Content Include="Images\Settings.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
