--- a/ClipClop.csproj
+++ b/ClipClop.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <None Remove="appIcon.ico" />
+    <None Remove="backdrop.png" />
     <None Remove="Fonts\FontAwesomeReg.otf" />
     <None Remove="Fonts\FontAwesomeSolid.otf" />
     <None Remove="Images\ClipClopIcon.png" />
@@ -31,6 +32,9 @@
     <Resource Include="Fonts\FontAwesomeSolid.otf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Content Include="backdrop.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\ClipClopIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
