--- a/ClipClop.csproj
+++ b/ClipClop.csproj
@@ -20,6 +20,7 @@
     <None Remove="backdrop.png" />
     <None Remove="Fonts\FontAwesomeReg.otf" />
     <None Remove="Fonts\FontAwesomeSolid.otf" />
+    <None Remove="Images\appIcon.ico" />
     <None Remove="Images\ClipClopIcon.png" />
   </ItemGroup>
 
@@ -41,11 +42,11 @@
     <Resource Include="Fonts\FontAwesomeSolid.otf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <CodeAnalysisDictionary Include="appIcon.ico">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </CodeAnalysisDictionary>
     <Content Include="backdrop.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\appIcon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\ClipClopIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
