We were doing more work than was needed for the temp window, removed the threading and message loop and the WndProcDelegate was getting collected by the gc and causing an uncatachable crash so we keep a ref to it in the class.

--- a/ClipClopNew.csproj
+++ b/ClipClopNew.csproj
@@ -29,7 +29,9 @@
       <AvaloniaResource Include="Images\appIcon.ico" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Images\appIcon.ico" />
+      <Content Include="Images\appIcon.ico">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
@@ -45,6 +47,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="backdrop.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Images\ClipClopIcon.png">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
